--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@ xmlhttp.onreadystatechange=function()
     document.getElementById("myDiv").innerHTML=xmlhttp.responseText;
     }
   }
-xmlhttp.open("GET","http://www.municipi.net/app/test.php",true);
+xmlhttp.open("GET","http://www.municipi.net/app/php/test.php",true);
 xmlhttp.send();
 }
 </script>
