--- a/www/index.html
+++ b/www/index.html
@@ -1,10 +1,15 @@
 ﻿<html>
 <head>
-<script src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.js" ></script>
 </head>
 <body>
-<script>
-$.get("www.google.com", function(response) { alert(response) });
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $.ajax({
+      type: "GET",
+      url: "http://www.municipi.net/app/php/insert.php"
+    }).done(function( data) {
+      alert( "Request is done" );
+    });
 </script>
 </body>
 </html>
