--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 <script type="text/javascript">
     $.ajax({
       type: "GET",
-      url: "http://www.municipi.net/app/php/insert.php"
+      url: "https://www.municipi.net/app/php/insert.php"
     }).done(function( data) {
       alert( "Request is done" );
     });
