--- a/www/index.html
+++ b/www/index.html
@@ -147,7 +147,7 @@
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>       
-        <script src="/js/locate/L.Control.Locate.min.js" ></script>
+        <script src="js/locate/L.Control.Locate.min.js" ></script>
         <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>         
         <script src="js/leaflet-plugins-master/layer/tile/Google.js"></script>          
         
