canvi gps despres pujar foto

--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" /> 
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-        <link rel="stylesheet" href="js/locate/L.Control.Locate.min.css" />
+        <link rel="stylesheet" href="http://www.municipi.net/app/www/js/locate/L.Control.Locate.min.css" />
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">    
 		<script type="text/javascript">
 //			document.addEventListener('deviceready', function() {
@@ -458,10 +458,10 @@
                                         
                 if (latitude == 0 ) {                   
                     visor.posicioActual = { 'trobat' : 0,
-                                        'lat' : 41.24 ,
-                                        'lng' : 2.1,
-                                    };      
-                }
+                                        'lat' : 42.188 ,
+                                        'lng' : 3.0819,
+                                    };
+									                }
                 else {
                 } 
                 if ( visor.primeraUbicació ==  1){
