--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
     <div class="bar bar-header bar-positive" style="margin-bottom:80px;">
         <h1 class="title">Insert Database</h1>
         <a class="button button-clear" href="readjson.html">Read JSON</a>
+        <a class="button button-clear" href="geo.html">Geo</a>
     </div>
     <br/>
     <br/>
