--- a/www/geo.html
+++ b/www/geo.html
@@ -1,45 +1,40 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>Device Properties Example</title>
 
-    <script type="text/javascript" charset="utf-8" src="cordova-2.0.0.js"></script>
-    <script type="text/javascript" charset="utf-8">
+<head>
+<meta http-equiv="Content-Security-Policy" content="default-src gap: file://* *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; img-src * data: 'unsafe-inline'; connect-src * 'unsafe-inline'; frame-src *;" />
 
-    // Wait for Cordova to load
-    //
-    document.addEventListener("deviceready", onDeviceReady, false);
-
-    // Cordova is ready
-    //
-    function onDeviceReady() {
-        navigator.geolocation.getCurrentPosition(onSuccess, onError);
-    }
-
-    // onSuccess Geolocation
-    //
-    function onSuccess(position) {
-        var element = document.getElementById('geolocation');
-        element.innerHTML = 'Latitude: '           + position.coords.latitude              + '<br />' +
-                            'Longitude: '          + position.coords.longitude             + '<br />' +
-                            'Altitude: '           + position.coords.altitude              + '<br />' +
-                            'Accuracy: '           + position.coords.accuracy              + '<br />' +
-                            'Altitude Accuracy: '  + position.coords.altitudeAccuracy      + '<br />' +
-                            'Heading: '            + position.coords.heading               + '<br />' +
-                            'Speed: '              + position.coords.speed                 + '<br />' +
-                            'Timestamp: '          +                                   position.timestamp          + '<br />';
-    }
-
-    // onError Callback receives a [PositionError](PositionError/positionError.html) object
-    //
-    function onError(error) {
-        alert('code: '    + error.code    + '\n' +
-              'message: ' + error.message + '\n');
-    }
-
+    <link rel="stylesheet" type="text/css" href="css/ionic.css">
+    <script type="text/javascript" src="js/jquery.js"></script>
+    
+    
+    <script type="text/javascript">
+function myPosition() {  
+  var options = {  
+  enableHighAccuracy: true,  
+  maximumAge: 10000  
+   }  
+   var watchID = navigator.geolocation.getCurrentPosition(onSuccess2, onError2, options);  
+  
+  
+   function onSuccess2(position) {  
+  alert('Latitude: '          + position.coords.latitude          + '\n' +  
+'Longitude: '         + position.coords.longitude         + '\n' +  
+'Altitude: '          + position.coords.altitude          + '\n' +  
+'Accuracy: '          + position.coords.accuracy          + '\n' +  
+'Altitude Accuracy: ' + position.coords.altitudeAccuracy  + '\n' +  
+'Heading: '           + position.coords.heading           + '\n' +  
+'Speed: '             + position.coords.speed             + '\n' +  
+'Timestamp: '         + position.timestamp                + '\n');  
+   };  
+  
+  
+   function onError2(error) {  
+  alert('code: '    + error.code    + '\n' + 'message: ' + error.message + '\n');  
+   }  
+}  
     </script>
   </head>
   <body>
-    <p id="geolocation">Finding geolocation...</p>
+    <p id="geolocation">Finding geo</p>
   </body>
 </html>
