--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,124 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Security-Policy" content="default-src gap: file://* *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; img-src * data: 'unsafe-inline'; connect-src * 'unsafe-inline'; frame-src *;" />
+    <meta http-equiv="Content-Security-Policy" content="default-src * gap://ready file:; style-src 'self' 'unsafe-inline'; img-src * 'self' data:; script-src * 'unsafe-inline' 'unsafe-eval'">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <style type="text/css">
+        body,
+        ul{
+            padding: 0;
+            margin: 0;
+        }
+
+        body.ios{
+            margin-top: 20px;
+        }
+
+        body:not(.android) .android-only,
+        body:not(.ios) .ios-only,
+        body:not(.windows) .windows-only{
+            display: none;
+        }
+
+        .os-conditional,
+        .settings button.os-conditional{
+            display: none;
+        }
+
+        body.android .os-conditional.android,
+        body.ios .os-conditional.ios,
+        body.windows .os-conditional.windows,
+        body.android .settings button.os-conditional.android,
+        body.ios .settings button.os-conditional.ios,
+        body.windows .settings button.os-conditional.windows{
+            display: block;
+        }
+
+
+        h2{
+            text-align: center;
+            margin-top: 0;
+            padding-top: 0;
+        }
+        li{
+            list-style: none;
+            clear: right;
+            padding: 0;
+            margin: 12px 0 0 4px;
+        }
+        li span.name{
+
+        }
+        li span.state,
+        li span.value{
+            float: right;
+            padding: 2px;
+        }
+        li span.on{
+            background-color: green;
+        }
+        li span.off{
+            background-color: red;
+        }
+
+        li span.on,
+        li.off span.on,
+        li.on span.off{
+            display: none;
+        }
+
+        li.on span.on{
+            display: list-item !important;
+        }
+
+        .settings{
+            border-top: 1px solid #000;
+            margin-top: 24px;
+            padding-top: 24px;
+            width: 100%;
+        }
+
+        .settings button,
+        .settings select{
+            display: block;
+            margin: 0 auto;
+            margin-bottom: 24px;
+        }
+
+        .disabled{
+            color: #cccccc;
+        }
+
+        #request-external-sd-details-results{
+            display: none;
+            margin-top: 12px;
+            border-top: 1px solid #000;
+            width: 100%;
+            word-break: break-word;
+        }
+        #request-external-sd-details-results p{
+            padding: 12px;
+        }
+        #write-external-sd-file{
+            display: none;
+        }
+
+        #request-remote-notifications{
+            border: 1px solid #ccc;
+            margin: 0 12px;
+            padding-top: 12px;
+        }
+
+        #request-remote-notifications *{
+            text-align: center;
+        }
+
+    </style>
 
     <link rel="stylesheet" type="text/css" href="css/ionic.css">
     <script type="text/javascript" src="js/jquery.js"></script>
@@ -91,6 +208,61 @@ function myPosition() {
             <input type="button" id="insert" class="button button-block" value="Insert" />
         </div>
     </div>
+    --
+    <div id="state">
+    <h3>Location</h3>
+    <ul>
+        <li class="location">
+            <span class="name">Location</span>
+            <span class="state on">AVAILABLE</span>
+            <span class="state off">UNAVAILABLE</span>
+        </li>
+        <li class="location-setting os-conditional android ios">
+            <span class="name">Location setting</span>
+            <span class="state on">ENABLED</span>
+            <span class="state off">DISABLED</span>
+        </li>
+        <li class="gps-location android-only">
+            <span class="name">GPS Location</span>
+            <span class="state on">AVAILABLE</span>
+            <span class="state off">UNAVAILABLE</span>
+        </li>
+        <li class="gps-location-setting android-only">
+            <span class="name">GPS Location setting</span>
+            <span class="state on">ENABLED</span>
+            <span class="state off">DISABLED</span>
+        </li>
+        <li class="network-location android-only">
+            <span class="name">Network Location</span>
+            <span class="state on">AVAILABLE</span>
+            <span class="state off">UNAVAILABLE</span>
+        </li>
+        <li class="network-location-setting android-only">
+            <span class="name">Network Location setting</span>
+            <span class="state on">ENABLED</span>
+            <span class="state off">DISABLED</span>
+        </li>
+        <li class="location-mode android-only">
+            <span class="name">Location Mode</span>
+            <span class="value"></span>
+        </li>
+        <li class="location-authorization os-conditional android ios">
+            <span class="name">Location authorized</span>
+            <span class="state on">AUTHORIZED</span>
+            <span class="state off">UNAUTHORIZED</span>
+        </li>
+        <li class="location-authorization-status os-conditional android ios">
+            <span class="name">Location authorization status</span>
+            <span class="value"></span>
+        </li>
+    </ul>
+   
+</div>
+
+<div class="settings">
+    <h3>Use permissions</h3>
+    <button id="get-location">Get Current Location</button>
+</div>
 </body>
 
 </html>
