--- a/www/index.html
+++ b/www/index.html
@@ -325,7 +325,7 @@
                     case 'fesFoto':
                         txtPeu =    ' <div onclick="uploadFromGallery();" style="width: 40%; margin-left: 30%; border-radius: 10px; color: rgb(255, 255, 255); text-shadow: 0px 0px rgb(0, 0, 0); background-color: rgb(196, 13, 1); padding: 0.3em 0em 0.5em; height: 1em; margin-bottom: 0.2em; margin-top: 0.2em;">'
                                    +    '    Foto  <i class="fa fa-camera "></i>'
-                                   +    ' </div>';
+                                   +    ' </div> <a href="form.html">test</a>';
                         break;
                     				
                     
