--- a/www/index.html
+++ b/www/index.html
@@ -828,8 +828,11 @@
 					<div style="float: left; font-weight:bold; text-align: center; font-family: Verdana; color: rgb(255, 255, 255); width: 100%; height: 1.1em; margin-top: 0.3em;"> 
 						<a id="activa" href="#imatgePujada" data-transition="pop">	
 							Alerta Via Pública
-						</a>			
+						</a><a id="activa" href="geo.html" data-transition="pop">	
+							TEST BDD
+						</a>				
 				     </div>
+                  
 					<div style="clear: both; text-align: center; font-family: Verdana; color: rgb(255, 255, 255); font-size: 0.6em; width: 100%; height: 15px; margin-top: -1px;"> Sant Pere Pescador </div>
 				</div>
 				<div id="troba5" style="float: right; margin-top: -1.3em;height:24px ; font-size: 1.5em; width: 5%;margin-right: 9px;" onclick="navigator.app.exitApp();">
