--- a/www/index.html
+++ b/www/index.html
@@ -826,11 +826,7 @@
 				<div style="float: left; height: auto; text-align: left; padding-top: 0px; font-family: Verdana; color: rgb(220, 70, 0); width: 100%; margin-left:-5%;float: left; ">
 					
 					<div style="float: left; font-weight:bold; text-align: center; font-family: Verdana; color: rgb(255, 255, 255); width: 100%; height: 1.1em; margin-top: 0.3em;"> 
-						<a id="activa" href="#imatgePujada" data-transition="pop">	
-							Alerta Via Pública
-						</a><a id="activa" href="geo.html" data-transition="pop">	
-							TEST BDD
-						</a>				
+						<a id="activa" href="#imatgePujada" data-transition="pop">Alerta</a><a id="activa" href="geo.html" data-transition="pop">TEST BDD</a>				
 				     </div>
                   
 					<div style="clear: both; text-align: center; font-family: Verdana; color: rgb(255, 255, 255); font-size: 0.6em; width: 100%; height: 15px; margin-top: -1px;"> Sant Pere Pescador </div>
