--- a/www/readjson.html
+++ b/www/readjson.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="css/ionic.css">
-    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js-bdd/jquery.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {
         var url = "http://www.municipi.net/app3/json.php";
